cmake_minimum_required(VERSION 3.25)
project(CHERI_FLEXPOINTER)

set(CMAKE_CXX_STANDARD 14)

include_directories(benchmark/histogram)
include_directories(benchmark/kmeans)
include_directories(benchmark/linear_regression)
include_directories(benchmark/matrix_multiply)
include_directories(jemalloc/include)
include_directories(jemalloc/include/jemalloc)
include_directories(jemalloc/include/jemalloc/internal)
include_directories(jemalloc/src/tlb-sim)
include_directories(jemalloc/src/tlb-sim/preprocess)

add_executable(CHERI_FLEXPOINTER
        benchmark/histogram/coz.h
        benchmark/histogram/histogram-pthreads.c
        benchmark/histogram/stddefines.h
        benchmark/kmeans/coz.h
        benchmark/kmeans/kmeans.c
        benchmark/kmeans/prof.h
        benchmark/kmeans/stddefines.h
        benchmark/linear_regression/coz.h
        benchmark/linear_regression/linear_regression_pthreads.c
        benchmark/linear_regression/stddefines.h
        benchmark/matrix_multiply/coz.h
        benchmark/matrix_multiply/map_reduce.h
        benchmark/matrix_multiply/matrix_multiply-pthreads.c
        benchmark/matrix_multiply/stddefines.h
        jemalloc/include/jemalloc/internal/arena_externs.h
        jemalloc/include/jemalloc/internal/arena_inlines_a.h
        jemalloc/include/jemalloc/internal/arena_inlines_b.h
        jemalloc/include/jemalloc/internal/arena_stats.h
        jemalloc/include/jemalloc/internal/arena_structs_a.h
        jemalloc/include/jemalloc/internal/arena_structs_b.h
        jemalloc/include/jemalloc/internal/arena_types.h
        jemalloc/include/jemalloc/internal/assert.h
        jemalloc/include/jemalloc/internal/atomic.h
        jemalloc/include/jemalloc/internal/atomic_c11.h
        jemalloc/include/jemalloc/internal/atomic_gcc_atomic.h
        jemalloc/include/jemalloc/internal/atomic_gcc_sync.h
        jemalloc/include/jemalloc/internal/background_thread_externs.h
        jemalloc/include/jemalloc/internal/background_thread_inlines.h
        jemalloc/include/jemalloc/internal/background_thread_structs.h
        jemalloc/include/jemalloc/internal/base_externs.h
        jemalloc/include/jemalloc/internal/base_inlines.h
        jemalloc/include/jemalloc/internal/base_structs.h
        jemalloc/include/jemalloc/internal/base_types.h
        jemalloc/include/jemalloc/internal/bin.h
        jemalloc/include/jemalloc/internal/bin_stats.h
        jemalloc/include/jemalloc/internal/bin_types.h
        jemalloc/include/jemalloc/internal/bit_util.h
        jemalloc/include/jemalloc/internal/bitmap.h
        jemalloc/include/jemalloc/internal/cache_bin.h
        jemalloc/include/jemalloc/internal/ckh.h
        jemalloc/include/jemalloc/internal/ctl.h
        jemalloc/include/jemalloc/internal/div.h
        jemalloc/include/jemalloc/internal/emitter.h
        jemalloc/include/jemalloc/internal/extent_dss.h
        jemalloc/include/jemalloc/internal/extent_externs.h
        jemalloc/include/jemalloc/internal/extent_inlines.h
        jemalloc/include/jemalloc/internal/extent_mmap.h
        jemalloc/include/jemalloc/internal/extent_structs.h
        jemalloc/include/jemalloc/internal/extent_types.h
        jemalloc/include/jemalloc/internal/hash.h
        jemalloc/include/jemalloc/internal/hook.h
        jemalloc/include/jemalloc/internal/jemalloc_internal_decls.h
        jemalloc/include/jemalloc/internal/jemalloc_internal_defs.h
        jemalloc/include/jemalloc/internal/jemalloc_internal_defs_FreeBSD.h
        jemalloc/include/jemalloc/internal/jemalloc_internal_externs.h
        jemalloc/include/jemalloc/internal/jemalloc_internal_includes.h
        jemalloc/include/jemalloc/internal/jemalloc_internal_inlines_a.h
        jemalloc/include/jemalloc/internal/jemalloc_internal_inlines_b.h
        jemalloc/include/jemalloc/internal/jemalloc_internal_inlines_c.h
        jemalloc/include/jemalloc/internal/jemalloc_internal_macros.h
        jemalloc/include/jemalloc/internal/jemalloc_internal_types.h
        jemalloc/include/jemalloc/internal/jemalloc_preamble.h
        jemalloc/include/jemalloc/internal/large_externs.h
        jemalloc/include/jemalloc/internal/log.h
        jemalloc/include/jemalloc/internal/malloc_io.h
        jemalloc/include/jemalloc/internal/mutex.h
        jemalloc/include/jemalloc/internal/mutex_pool.h
        jemalloc/include/jemalloc/internal/mutex_prof.h
        jemalloc/include/jemalloc/internal/nstime.h
        jemalloc/include/jemalloc/internal/pages.h
        jemalloc/include/jemalloc/internal/ph.h
        jemalloc/include/jemalloc/internal/private_namespace.h
        jemalloc/include/jemalloc/internal/prng.h
        jemalloc/include/jemalloc/internal/prof_externs.h
        jemalloc/include/jemalloc/internal/prof_inlines_a.h
        jemalloc/include/jemalloc/internal/prof_inlines_b.h
        jemalloc/include/jemalloc/internal/prof_structs.h
        jemalloc/include/jemalloc/internal/prof_types.h
        jemalloc/include/jemalloc/internal/public_namespace.h
        jemalloc/include/jemalloc/internal/ql.h
        jemalloc/include/jemalloc/internal/qr.h
        jemalloc/include/jemalloc/internal/quantum.h
        jemalloc/include/jemalloc/internal/rb.h
        jemalloc/include/jemalloc/internal/rtree.h
        jemalloc/include/jemalloc/internal/rtree_tsd.h
        jemalloc/include/jemalloc/internal/safety_check.h
        jemalloc/include/jemalloc/internal/sc.h
        jemalloc/include/jemalloc/internal/seq.h
        jemalloc/include/jemalloc/internal/smoothstep.h
        jemalloc/include/jemalloc/internal/spin.h
        jemalloc/include/jemalloc/internal/stats.h
        jemalloc/include/jemalloc/internal/sz.h
        jemalloc/include/jemalloc/internal/tcache_externs.h
        jemalloc/include/jemalloc/internal/tcache_inlines.h
        jemalloc/include/jemalloc/internal/tcache_structs.h
        jemalloc/include/jemalloc/internal/tcache_types.h
        jemalloc/include/jemalloc/internal/test_hooks.h
        jemalloc/include/jemalloc/internal/ticker.h
        jemalloc/include/jemalloc/internal/tsd.h
        jemalloc/include/jemalloc/internal/tsd_generic.h
        jemalloc/include/jemalloc/internal/tsd_malloc_thread_cleanup.h
        jemalloc/include/jemalloc/internal/tsd_tls.h
        jemalloc/include/jemalloc/internal/tsd_types.h
        jemalloc/include/jemalloc/internal/util.h
        jemalloc/include/jemalloc/internal/witness.h
        jemalloc/include/jemalloc/jemalloc.h
        jemalloc/include/jemalloc/jemalloc_FreeBSD.h
        jemalloc/include/jemalloc/jemalloc_typedefs.h
        jemalloc/src/tlb-sim/pintool/trace.cpp
        jemalloc/src/tlb-sim/preprocess/main.cpp
        jemalloc/src/tlb-sim/preprocess/range_table.cpp
        jemalloc/src/tlb-sim/preprocess/range_table.h
        jemalloc/src/tlb-sim/preprocess/simulator.cpp
        jemalloc/src/tlb-sim/preprocess/simulator.h
        jemalloc/src/tlb-sim/preprocess/utils.cpp
        jemalloc/src/tlb-sim/preprocess/utils.h
        jemalloc/src/tlb-sim/dtlb.cpp
        jemalloc/src/tlb-sim/main.cpp
        jemalloc/src/tlb-sim/range_table.cpp
        jemalloc/src/tlb-sim/range_table.h
        jemalloc/src/tlb-sim/rtlb.cpp
        jemalloc/src/tlb-sim/simulator.cpp
        jemalloc/src/tlb-sim/simulator.h
        jemalloc/src/tlb-sim/tlb.h
        jemalloc/src/tlb-sim/utils.cpp
        jemalloc/src/tlb-sim/utils.h
        jemalloc/src/arena.c
        jemalloc/src/background_thread.c
        jemalloc/src/base.c
        jemalloc/src/bin.c
        jemalloc/src/bitmap.c
        jemalloc/src/ckh.c
        jemalloc/src/ctl.c
        jemalloc/src/div.c
        jemalloc/src/extent.c
        jemalloc/src/extent_dss.c
        jemalloc/src/extent_mmap.c
        jemalloc/src/hash.c
        jemalloc/src/hook.c
        jemalloc/src/jemalloc.c
        jemalloc/src/large.c
        jemalloc/src/log.c
        jemalloc/src/malloc_io.c
        jemalloc/src/mutex.c
        jemalloc/src/mutex_pool.c
        jemalloc/src/nstime.c
        jemalloc/src/pages.c
        jemalloc/src/prng.c
        jemalloc/src/prof.c
        jemalloc/src/rtree.c
        jemalloc/src/safety_check.c
        jemalloc/src/sc.c
        jemalloc/src/stats.c
        jemalloc/src/sz.c
        jemalloc/src/tcache.c
        jemalloc/src/test_hooks.c
        jemalloc/src/ticker.c
        jemalloc/src/tsd.c
        jemalloc/src/witness.c)
